Saving action attribute changes